--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/jeonhyun97/md-hierarchical-parser/issues"
   },
-  "homepage": "https://github.com/jeonhyun97/md-hierarchical-parser#readme"
+  "homepage": "https://github.com/jeonhyun97/md-hierarchical-parser#readme",
+  "dependencies": {
+    "md-mdast": "^3.4.0"
+  }
 }
