--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-hierarchical-parser",
   "version": "1.0.0",
   "description": "parser which generates parsed hierarchical structure of markdown",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
