github package release setup

--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
   "dependencies": {
     "md-mdast": "^3.4.0",
     "stack-lifo": "^0.1.6"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
